[1.91] sync - faq/ports/guide.html

--- a/faq/ports/guide.html
+++ b/faq/ports/guide.html
@@ -33,7 +33,7 @@
   <li><a href="#PortsUpdate"      >Обновление портов</a>
   <ul>
     <li><a href="#UpdateChecklist">Обновление Checklist</a>
-    <li><a href="#CommitUpdates  ">Committing Port Updates</a>
+    <li><a href="#CommitUpdates"  >Обновление портов (committing)</a>
   </ul>
   <li><a href="#PortsPolicy"      >Политика OpenBSD касательно портов</a>
   <li><a href="#PortsSecurity"    >Рекомендации безопасности</a>
