[1.62] rfc2.ru is dead - opensmtpd/index.html

--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -49,7 +49,7 @@
 
 <p>
 OpenSMTPD представляет из себя <strong>СВОБОДНУЮ</strong> реализацию серверной
-части SMTP протокола, описанного в <a href="https://rfc2.ru/5321.rfc">RFC 5321</a>,
+части SMTP протокола, описанного в RFC 5321
 с некоторыми дополнительными расширениями этого стандарта.
 Она позволяет обычным машинам обмениваться электронной почтой с другими системами,
 используя протокол SMTP.
