[1.12] rfc2.ru is dead - opensmtpd/manual.html

--- a/opensmtpd/manual.html
+++ b/opensmtpd/manual.html
@@ -51,4 +51,4 @@ Web руководства доступны в самой
 
 <p>
 Протокол SMTP, реализованный в OpenSMTPD, описан в
-<a href="https://rfc2.ru/5321.rfc">RFC 5321</a>.
+<a href="https://www.ietf.org/rfc/rfc5321.txt">RFC 5321</a>.
