--- a/faq/ports/index.html
+++ b/faq/ports/index.html
@@ -48,6 +48,7 @@
   <li><a href="guide.html#PortsUpdate"      >Обновление портов</a>
   <ul>
     <li><a href="guide.html#UpdateChecklist">Обновление Checklist</a>
+    <li><a href="guide.html#CommitUpdates"  >Обновление портов (committing)</a>
   </ul>
   <li><a href="guide.html#PortsPolicy"      >Политика OpenBSD касательно портов</a>
   <li><a href="guide.html#PortsSecurity"    >Рекомендации безопасности</a>
