[1.17] rfc2.ru is dead - openbgpd/manual.html

--- a/openbgpd/manual.html
+++ b/openbgpd/manual.html
@@ -31,4 +31,4 @@ Web руководства доступны в самой
 
 <p>
 Протокол BGP, реализованный в OpenBGPD, описан в
-<a href="https://rfc2.ru/4271.rfc/print">RFC 4271</a>.
+<a href="https://www.ietf.org/rfc/rfc4271.txt">RFC 4271</a>.
