--- a/faq/faq1.html
+++ b/faq/faq1.html
@@ -1,10 +1,6 @@
 <!doctype html>
 <html lang=ru id=faq>
 
-<!-- If you make edits to any FAQ documents, please start each sentence
-     on a new line, and try to keep the general formatting consistent
-     with the rest of the pages -->
-
 <title>OpenBSD FAQ: Введение в OpenBSD</title>
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -126,21 +122,21 @@ OpenBSD работает на следующих <a href="https://www.openbsd.or
 <!-- XXXrelease - verify platform list is current -->
 
 <ul>
-  <li><a href="https://www.openbsd.org/alpha.html"   >alpha</a>
-  <li><a href="https://www.openbsd.org/amd64.html"   >amd64</a>
-  <li><a href="https://www.openbsd.org/arm64.html"   >arm64</a>
-  <li><a href="https://www.openbsd.org/armv7.html"   >armv7</a>
-  <li><a href="https://www.openbsd.org/hppa.html"    >hppa</a>
-  <li><a href="https://www.openbsd.org/i386.html"    >i386</a>
-  <li><a href="https://www.openbsd.org/landisk.html" >landisk</a>
-  <li><a href="https://www.openbsd.org/loongson.html">loongson</a>
-  <li><a href="https://www.openbsd.org/luna88k.html" >luna88k</a>
-  <li><a href="https://www.openbsd.org/macppc.html"  >macppc</a>
-  <li><a href="https://www.openbsd.org/octeon.html"  >octeon</a>
-  <li><a href="https://www.openbsd.org/sparc64.html" >sparc64</a>
+  <li><a href="https://www.openbsd.org/alpha.html"    >alpha</a>
+  <li><a href="https://www.openbsd.org/amd64.html"    >amd64</a>
+  <li><a href="https://www.openbsd.org/arm64.html"    >arm64</a>
+  <li><a href="https://www.openbsd.org/armv7.html"    >armv7</a>
+  <li><a href="https://www.openbsd.org/hppa.html"     >hppa</a>
+  <li><a href="https://www.openbsd.org/i386.html"     >i386</a>
+  <li><a href="https://www.openbsd.org/landisk.html"  >landisk</a>
+  <li><a href="https://www.openbsd.org/loongson.html" >loongson</a>
+  <li><a href="https://www.openbsd.org/luna88k.html"  >luna88k</a>
+  <li><a href="https://www.openbsd.org/macppc.html"   >macppc</a>
+  <li><a href="https://www.openbsd.org/powerpc64.html">powerpc64</a>
+  <li><a href="https://www.openbsd.org/sparc64.html"  >sparc64</a>
 </ul>
 
-Specific hardware support details are on the respective platform pages.
+На этих страницах можно найти подробности, касательно поддержки той или иной платформы.
 
 <h2 id="ManPages">Страницы руководства</h2>
 
