[1.13] sync, 6.7p1 release - rpki-client/index.html

--- a/rpki-client/index.html
+++ b/rpki-client/index.html
@@ -35,8 +35,8 @@
       </h1>
 
       <p id="callout">
-        <a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-6.7p0.txt">rpki-client 6.7p0</a>
-        вышла 18 мая 2020 года.
+        <a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-6.7p1.txt">rpki-client 6.7p1</a>
+        вышла 27 июля 2020 года.
 
 <p>
 <a href="https://man.openbsd.org/rpki-client">rpki-client</a>
