[1.543] update link to PF carp.html - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -223,7 +223,7 @@ XXX  -->
   <li><a href="pf/perf.html"                                 >Производительность</a>
   <li><a href="https://www.openbsd.org/faq/pf/ftp.html"      >Проблемы с FTP</a>
   <li><a href="https://www.openbsd.org/faq/pf/authpf.html"   >Оболочка для аутентификации пользователей на шлюзах (authpf)</a>
-  <li><a href="https://www.openbsd.org/faq/pf/carp.html"     >Создание избыточности брэндмауэра (CARP и pfsync)</a>
+  <li><a href="pf/carp.html"                                 >Создание резервной группы хостов Firewall'а при помощи CARP и pfsync</a>
   </ul>
 <li>Примеры правил
   <ul>
