[1.89] update link to carp.html - faq/pf/index.html

--- a/faq/pf/index.html
+++ b/faq/pf/index.html
@@ -20,33 +20,33 @@ PF: Пакетный фильтр OpenBSD
 <ul>
 <li>Основная настройка
 	<ul>
-	<li><a href="config.html">Начинаем работать с PF</a>
-	<li><a href="macros.html">Списки и макросы</a>
-	<li><a href="tables.html">Таблицы</a>
-	<li><a href="https://openbsd.org/faq/pf/filter.html">Фильтрация пакетов</a>
-	<li><a href="nat.html"   >Преобразование сетевых адресов (NAT)</a>
-	<li><a href="https://openbsd.org/faq/pf/rdr.html">Перенаправление трафика (проброс портов)</a>
+	<li><a href="config.html"                              >Начинаем работать с PF</a>
+	<li><a href="macros.html"                              >Списки и макросы</a>
+	<li><a href="tables.html"                              >Таблицы</a>
+	<li><a href="https://openbsd.org/faq/pf/filter.html"   >Фильтрация пакетов</a>
+	<li><a href="nat.html"                                 >Преобразование сетевых адресов (NAT)</a>
+	<li><a href="https://openbsd.org/faq/pf/rdr.html"      >Перенаправление трафика (проброс портов)</a>
 	<li><a href="https://openbsd.org/faq/pf/shortcuts.html">Сокращения для написания правил</a>
 	</ul>
 <li>Продвинутая настройка
 	<ul>
-	<li><a href="options.html">Параметры работы фильтра</a>
-	<li><a href="https://openbsd.org/faq/pf/anchors.html">Якоря</a>
-	<li><a href="https://openbsd.org/faq/pf/queueing.html">Управление очередями пакетов и приоритезация</a>
-	<li><a href="https://openbsd.org/faq/pf/pools.html">Пулы адресов и балансировка нагрузки</a>
-	<li><a href="https://openbsd.org/faq/pf/tagging.html">Маркировка пакетов (политика фильтрации)</a>
+	<li><a href="options.html"                             >Параметры работы фильтра</a>
+	<li><a href="https://openbsd.org/faq/pf/anchors.html"  >Якоря</a>
+	<li><a href="https://openbsd.org/faq/pf/queueing.html" >Управление очередями пакетов и приоритезация</a>
+	<li><a href="https://openbsd.org/faq/pf/pools.html"    >Пулы адресов и балансировка нагрузки</a>
+	<li><a href="https://openbsd.org/faq/pf/tagging.html"  >Маркировка пакетов (политика фильтрации)</a>
 	</ul>
 <li>Дополнительные темы
 	<ul>
-	<li><a href="logging.html">Создание и анализ log-файлов (протоколирование)</a>
-	<li><a href="perf.html"   >Производительность</a>
-	<li><a href="https://openbsd.org/faq/pf/ftp.html">Проблемы с FTP</a>
-	<li><a href="https://openbsd.org/faq/pf/authpf.html">Оболочка для аутентификации пользователей на шлюзах (authpf)</a>
-	<li><a href="https://openbsd.org/faq/pf/carp.html">Создание избыточности брэндмауэра с помощью CARP и pfsync</a>
+	<li><a href="logging.html"                             >Создание и анализ log-файлов (протоколирование)</a>
+	<li><a href="perf.html"                                >Производительность</a>
+	<li><a href="https://openbsd.org/faq/pf/ftp.html"      >Проблемы с FTP</a>
+	<li><a href="https://openbsd.org/faq/pf/authpf.html"   >Оболочка для аутентификации пользователей на шлюзах (authpf)</a>
+	<li><a href="carp.html"                                >Создание резервной группы хостов Firewall'а при помощи CARP и pfsync</a>
 	</ul>
 <li>Пример
 	<ul>
-	<li><a href="https://openbsd.org/faq/pf/example1.html">Брандмауэр для дома или маленького офиса</a>
+	<li><a href="https://openbsd.org/faq/pf/example1.html" >Брандмауэр для дома или маленького офиса</a>
 	</ul>
 </ul>
 
