--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       <header>Русское сообщество</header>
       <ul>
         <li><a href="ru-community/articles.html">Статьи</a>
+        <li><a href="https://webchat.freenode.net?channels=%23openbsd-russian">freenode IRC канал</a>
         <li><a href="https://vk.com/openbsd_hackers">Группа в VK</a>
         <li><a href="https://github.com/openbsd-ru">Проект на GitHub</a>
       </ul>
