[1.89] update link to anchors - faq/pf/index.html

--- a/faq/pf/index.html
+++ b/faq/pf/index.html
@@ -31,7 +31,7 @@ PF: Пакетный фильтр OpenBSD
 <li>Продвинутая настройка
 	<ul>
 	<li><a href="options.html"                             >Параметры работы фильтра</a>
-	<li><a href="https://openbsd.org/faq/pf/anchors.html"  >Якоря</a>
+	<li><a href="anchors.html"                             >Anchors (привязанные правила)</a>
 	<li><a href="https://openbsd.org/faq/pf/queueing.html" >Управление очередями пакетов и приоритезация</a>
 	<li><a href="https://openbsd.org/faq/pf/pools.html"    >Пулы адресов и балансировка нагрузки</a>
 	<li><a href="https://openbsd.org/faq/pf/tagging.html"  >Маркировка пакетов (политика фильтрации)</a>
