[1.543] update link to anchors - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -213,7 +213,7 @@ XXX  -->
 <li>Детальная настройка
   <ul>
   <li><a href="pf/options.html"                              >Параметры работы фильтра</a>
-  <li><a href="https://www.openbsd.org/faq/pf/anchors.html"  >Якоря</a>
+  <li><a href="pf/anchors.html"                              >Anchors (привязанные правила)</a>
   <li><a href="https://www.openbsd.org/faq/pf/pools.html"    >Пулы адресов и балансировка нагрузки</a>
   <li><a href="https://www.openbsd.org/faq/pf/tagging.html"  >Маркировка пакетов (Политика фильтрации)</a>
   </ul>
