--- a/libressl/index.html
+++ b/libressl/index.html
@@ -39,8 +39,8 @@
       </h1>
 
       <p id="callout">
-        <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.1.3-relnotes.txt">LibreSSL 3.1.3</a>
-        вышла 15 июня 2020 года
+        <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.1.4-relnotes.txt">LibreSSL 3.1.4</a>
+        вышла 17 августа 2020 года
     
     <p>
     LibreSSL представляет из себя криптографический TLS-стек, возникший
@@ -56,8 +56,8 @@
     ОС (Linux, FreeBSD, Windows, и.т.д.).
 
     <p>
-    Последним stable релизом является 3.1.3.<br>
-    Последним development релизом является 3.2.0.<br>
+    Последним stable релизом является 3.1.4.<br>
+    Последним development релизом является 3.2.1.<br>
     Больше информации можно найти на странице <a href="releases.html">доступных версий</a>.
 
     <p>
