[1.4] sync - openiked/manual.html

--- a/openiked/manual.html
+++ b/openiked/manual.html
@@ -25,7 +25,7 @@ man-страницы
 <li><a href="https://man.openbsd.org/iked.8">iked</a>
     &mdash; демон Internet Key Exchange (IKEv2) второй версии
 <li><a href="https://man.openbsd.org/iked.conf.5">iked.conf</a>
-    &mdash; IKEv2 конфигурационный файл
+    &mdash; конфигурационный файл IKEv2 демона
 <li><a href="https://man.openbsd.org/ikectl.8">ikectl</a>
     &mdash; утилита упроавления IKEv2 демоном
 </ul>
