[1.4] sync - openiked/users.html

--- a/openiked/users.html
+++ b/openiked/users.html
@@ -17,7 +17,7 @@
 
 <p>
 Если вы хотите, чтобы мы добавили информацию о вас на эту старницу,
-отправьте письмо на
+отправьте письмо на адрес
 <a href="mailto:press@openbsd.org">press@openbsd.org</a>.
 
 <p>
