--- a/hackathons.html
+++ b/hackathons.html
@@ -90,6 +90,15 @@ td {
 <table>
 <tr>
 <td>
+    <a id="k2k20" href="images/hackathons/k2k20.gif">
+    <img src="images/hackathons/k2k20-s.gif" alt="k2k20"></a><br>
+    k2k20: german mini hackathon<br>
+    Сентябрь 11 - 17, 2020<br>
+    Замок Либенцелль, Германия<br>
+    14 разработчиков<br>
+    Организован благодаря финансированию со стороны
+    <a href="http://www.genua.de">genua</a>.
+<td>
     <a id="a2k20" href="images/hackathons/a2k20.png">
     <img src="images/hackathons/a2k20-s.png" alt="a2k20"></a><br>
     a2k20: antipodian hackathon<br>
@@ -110,6 +119,7 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и помощи <a href="https://www.seehotel-huberhof.de">Seehotel Huberhof</a>.
     <br>
+<tr>
 <td>
     <a id="e2k19" href="images/hackathons/e2k19.gif">
     <img src="images/hackathons/e2k19-s.gif" alt="e2k19-s"></a><br>
@@ -120,7 +130,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.xplornet.ca">Xplornet</a>.
-<tr>
 <td>
     <a id="p2k19" href="images/hackathons/p2k19.gif">
     <img src="images/hackathons/p2k19-s.gif" alt="p2k19-s"></a><br>
@@ -143,6 +152,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
+<tr>
 <td>
     <a id="t2k19" href="images/hackathons/t2k19.gif">
     <img src="images/hackathons/t2k19-s.gif" alt="t2k19-s"></a><br>
@@ -154,7 +164,6 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Kevin Lo и <a href="http://www.funtoro.com">MSI/FUNTORO</a>
     <br>
-<tr>
 <td>
     <a id="a2k19" href="images/hackathons/a2k19.gif">
     <img src="images/hackathons/a2k19-s.gif" alt="a2k19-s"></a><br>
@@ -176,6 +185,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
+<tr>
 <td>
     <a id="n2k18" href="images/hackathons/n2k18.gif">
     <img src="images/hackathons/n2k18-s.gif" alt="n2k18-s"></a><br>
@@ -186,7 +196,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и Oracle, а также при поддержке Univerzita Jana Evangelisty Purkyn&#283;.
-<tr>
 <td>
     <a id="g2k18" href="images/hackathons/g2k18.gif">
     <img src="images/hackathons/g2k18-s.gif" alt="g2k18-s"></a><br>
@@ -207,6 +216,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.epitech.eu">Epitech Nantes</a>.
+<tr>
 <td>
     <a id="a2k18" href="images/hackathons/a2k18.gif">
     <img src="images/hackathons/a2k18-s.gif" alt="a2k18-s"></a><br>
@@ -217,7 +227,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.otago.ac.nz">University of Otago</a>.
-<tr>
 <td>
     <a id="s2k17" href="images/hackathons/s2k17.gif">
     <img src="images/hackathons/s2k17-s.gif" alt="s2k17-s"></a><br>
@@ -239,6 +248,7 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.in-berlin.de">IN-Berlin</a> and
     <a href="http://www.hostserver.de/">Hostserver</a>.
+<tr>
 <td>
     <a id="t2k17" href="images/hackathons/t2k17.jpg">
     <img src="images/hackathons/t2k17-s.gif" alt="t2k17-s"></a><br>
@@ -249,7 +259,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.utoronto.ca">University of Toronto</a>.
-<tr>
 <td>
     <a id="d2k17" href="images/hackathons/d2k17.gif">
     <img src="images/hackathons/d2k17-s.gif" alt="d2k17-s"></a><br>
@@ -268,6 +277,7 @@ td {
     Эдмонтон, Канада<br>
     5 разработчиков<br>
     При поддержке Bob Beck.
+<tr>
 <td>
     <a id="a2k17" href="images/hackathons/a2k17.gif">
     <img src="images/hackathons/a2k17-s.gif" alt="a2k17-s"></a><br>
@@ -278,7 +288,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и David Gwynne.	
-<tr>
 <td>
     <br>
     <br>
@@ -310,6 +319,7 @@ td {
     10 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="g2k16" href="images/hackathons/g2k16.gif">
     <img src="images/hackathons/g2k16-s.gif" alt="g2k16-s"></a><br>
@@ -320,7 +330,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и помощи <a href="http://www.cl.cam.ac.uk">компьютерной лаборатории в Кэмбридже</a>.
-<tr>
 <td>
     <a id="n2k16" href="images/hackathons/n2k16.gif">
     <img src="images/hackathons/n2k16-s.gif" alt="n2k16-s"></a><br>
@@ -342,6 +351,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и помощи <a href="http://www.epitech.eu">Epitech Nantes</a>.
+<tr>
 <td>
     <a id="n2k15" href="images/hackathons/n2k15.gif">
     <img src="images/hackathons/n2k15-s.gif" alt="n2k15-s"></a><br>
@@ -352,7 +362,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://esdenera.com">Esdenera Networks</a>.
-<tr>
 <td>
     <a id="u2k15" href="images/hackathons/u2k15.gif">
     <img src="images/hackathons/u2k15-s.gif" alt="u2k15-s"></a><br>
@@ -373,6 +382,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и помощи <a href="http://foi.unizg.hr">Open Systems and Security Lab</a>.
+<tr>
 <td>
     <a id="j2k15" href="images/hackathons/j2k15.gif">
     <img src="images/hackathons/j2k15-s.gif" alt="j2k15-s"></a><br>
@@ -382,7 +392,6 @@ td {
     6 разработчиков<br>
     Организова при поддержке
     <a href="http://www.iij-ii.co.jp/en/">IIJ innovation institute</a>.
-<tr>
 <td>
     <a id="c2k15" href="images/hackathons/c2k15.gif">
     <img src="images/hackathons/c2k15-s.gif" alt="c2k15-s"></a><br>
@@ -403,6 +412,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Энди Хенрдерсона (Andy Henderson).
+<tr>
 <td>
     <a id="s2k15" href="images/hackathons/s2k15.gif">
     <img src="images/hackathons/s2k15-s.gif" alt="s2k15-s"></a><br>
@@ -413,7 +423,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Девида Гвинне (David Gwynne).
-<tr>
 <td>
     <a id="g2k14" href="images/hackathons/g2k14.gif">
     <img src="images/hackathons/g2k14-s.gif" alt="g2k14-s"></a><br>
@@ -434,6 +443,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.uca.ma/">Universit&eacute; Cadi Ayyad</a>.
+<tr>
 <td>
     <a id="n2k14" href="images/hackathons/n2k14.gif">
     <img src="images/hackathons/n2k14-s.gif" alt="n2k14-s"></a><br>
@@ -444,7 +454,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и поддержке <a href="http://www.otago.ac.nz">University of Otago</a>.
-<tr>
 <td>
     <a id="b2k13" href="images/hackathons/b2k13.gif">
     <img src="images/hackathons/b2k13-s.gif" alt="b2k13-s"></a><br>
@@ -465,6 +474,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.utoronto.ca">University of Toronto</a>.
+<tr>
 <td>
     <a id="n2k13" href="images/hackathons/n2k13.gif">
     <img src="images/hackathons/n2k13-s.gif" alt="n2k13-s"></a><br>
@@ -475,7 +485,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.otago.ac.nz">University of Otago</a>.
-<tr>
 <td>
     <a id="c2k12" href="images/hackathons/c2k12.gif">
     <img src="images/hackathons/c2k12-s.gif" alt="c2k12-s"></a><br>
@@ -495,6 +504,7 @@ td {
     9 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="n2k12" href="images/hackathons/n2k12.gif">
     <img src="images/hackathons/n2k12-s.gif" alt="n2k12-s"></a><br>
@@ -504,7 +514,6 @@ td {
     23 разработчика<br>
     Организован благодаря финансированию со стороны
     <a href="http://www.genua.de">genua</a>.
-<tr>
 <td>
     <a id="g2k12" href="images/hackathons/g2k12.gif">
     <img src="images/hackathons/g2k12-s.gif" alt="g2k12-s"></a><br>
@@ -525,6 +534,7 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.ihp.fr">Institute Henri Poincar&eacute;</a>
     и <a href="http://www.u-psud.fr">Paris-Sud University</a>.
+<tr>
 <td>
     <a id="p2k11" href="images/hackathons/p2k11.gif">
     <img src="images/hackathons/p2k11-s.gif" alt="p2k11-s"></a><br>
@@ -534,7 +544,6 @@ td {
     15 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="a2k11" href="images/hackathons/a2k11.gif">
     <img src="images/hackathons/a2k11-s.gif" alt="a2k11-s"></a><br>
@@ -555,6 +564,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Мити (Mitja Mu&#382;eni&#269;).
+<tr>
 <td>
     <a id="c2k11" href="images/hackathons/c2k11.gif">
     <img src="images/hackathons/c2k11-s.gif" alt="c2k11-s"></a><br>
@@ -564,7 +574,6 @@ td {
     36 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="k2k11" href="images/hackathons/k2k11.jpg">
     <img src="images/hackathons/k2k11-s.gif" alt="k2k11-s"></a><br>
@@ -583,6 +592,7 @@ td {
     19 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="j2k10" href="images/hackathons/j2k10.gif">
     <img src="images/hackathons/j2k10-s.gif" alt="j2k10-s"></a><br>
@@ -590,7 +600,6 @@ td {
     Сентябрь 19 - 25, 2010<br>
     Akiyamago, Sakae Mura, Nagano, Japan<br>
     19 разработчиков<br>
-<tr>
 <td>
     <a id="c2k10" href="images/hackathons/c2k10.gif">
     <img src="images/hackathons/c2k10-s.gif" alt="c2k10-s"></a><br>
@@ -617,6 +626,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://vpac.org">Victorian Partnership for Advanced Computing</a>
+<tr>
 <td>
     <a id="h2k9" href="images/hackathons/h2k9.gif">
     <img src="images/hackathons/h2k9-s.gif" alt="h2k9-s"></a><br>
@@ -627,7 +637,6 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>
     и при поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
-<tr>
 <td>
     <a id="p2k9" href="images/hackathons/p2k9.gif">
     <img src="images/hackathons/p2k9-s.gif" alt="p2k9-s"></a><br>
@@ -646,6 +655,7 @@ td {
     14 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.iis.se/english/">.se Foundation</a>.
+<tr>
 <td>
     <a id="c2k9" href="images/hackathons/c2k9.gif">
     <img src="images/hackathons/c2k9-s.gif" alt="c2k9-s"></a><br>
@@ -655,7 +665,6 @@ td {
     46 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="n2k9" href="images/hackathons/n2k9.gif">
     <img src="images/hackathons/n2k9-s.gif" alt="n2k9-s"></a><br>
@@ -673,6 +682,7 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>
     и поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
+<tr>
 <td>
     <a id="p2k8" href="images/hackathons/p2k8.gif">
     <img src="images/hackathons/p2k8-s.gif" alt="p2k8-s"></a><br>
@@ -682,7 +692,6 @@ td {
     13 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="c2k8" href="images/hackathons/c2k8.gif">
     <img src="images/hackathons/c2k8-s.gif" alt="c2k8-s"></a><br>
@@ -702,6 +711,7 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>
     и помощи Mark Uemura.
+<tr>
 <td>
     <a id="h2k7" href="images/hackathons/h2k7.gif">
     <img src="images/hackathons/h2k7-s.gif" alt="h2k7-s"></a><br>
@@ -712,7 +722,6 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
-<tr>
 <td>
     <a id="p2k7" href="images/hackathons/p2k7.gif">
     <img src="images/hackathons/p2k7-s.gif" alt="p2k7-s"></a><br>
@@ -731,6 +740,7 @@ td {
     50 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="f2k7" href="images/hackathons/f2k7.gif">
     <img src="images/hackathons/f2k7-s.gif" alt="f2k7-s"></a><br>
@@ -740,7 +750,6 @@ td {
     14 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="h2k6" href="images/hackathons/h2k6.gif">
     <img src="images/hackathons/h2k6-s.gif" alt="h2k6-s"></a><br>
@@ -760,6 +769,7 @@ td {
     14 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="k2k6" href="images/hackathons/k2k6.gif">
     <img src="images/hackathons/k2k6-s.gif" alt="k2k6-s"></a><br>
@@ -767,7 +777,6 @@ td {
     Август 28 - Sep 1, 2006<br>
     Замок Kransberg, Германия<br>
     14 разработчиков<br>
-<tr>
 <td>
     <a id="r2k6" href="images/hackathons/r2k6.gif">
     <img src="images/hackathons/r2k6-s.gif" alt="r2k6-s"></a><br>
@@ -785,6 +794,7 @@ td {
     47 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="v2k5" href="images/hackathons/v2k5.gif">
     <img src="images/hackathons/v2k5-s.gif" alt="v2k5-s"></a><br>
@@ -794,7 +804,6 @@ td {
     12 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="c2k5" href="images/hackathons/c2k5.gif">
     <img src="images/hackathons/c2k5-s.gif" alt="c2k5-s"></a><br>
@@ -813,6 +822,7 @@ td {
     46 разработчика<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="pf2k4" href="images/hackathons/pf2k4.gif">
     <img src="images/hackathons/pf2k4-s.gif" alt="pf2k4-s"></a><br>
@@ -821,7 +831,6 @@ td {
     Сишелт, Британская Колумбия<br>
     12 разработчиков<br>
     При поддержке Ryan McBride.
-<tr>
 <td>
     <a id="c2k3" href="images/hackathons/c2k3.gif">
     <img src="images/hackathons/c2k3-s.gif" alt="c2k3-s"></a><br>
@@ -840,6 +849,7 @@ td {
     Калгари, Альберта<br>
     42 разработчика<br>
     Организован благодаря финансированию со стороны DARPA.
+<tr>
 <td>
     <a id="c2k1-2" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -848,7 +858,6 @@ td {
     Вашингтон, округ Колумбия<br>
     Организован благодаря финансированию со стороны DARPA
     и поддержке <a href="http://www.usenix.org">USENIX</a>.
-<tr>
 <td>
     <a id="c2k1" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -867,6 +876,7 @@ td {
     18 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="c99" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -875,7 +885,6 @@ td {
     Калгари, Альберта<br>
     10 разработчиков<br>
     Организован Тео де Раадтом.
-<td>
 </table>
 
 Большинство картинок созданы художниками работающими либо с Тео де Раадтом (Theo de Raadt), либо с Боб Бэком (Bob Beck).<br>
@@ -884,7 +893,7 @@ pf2k4, c2k4, and c2k5 созданы David Woloschuk.<br>
 n2k10 создана Theo de Raadt, усовершенствована Ty Semaka.<br>
 c2k10, j2k10, and p2k10 создана Damon Mlekuz.<br>
 k2k11 создана Bret Lambert.<br>
-r2k12, g2k12, n2k12, b2k13, n2k14, m2k14, g2k14, s2k15, c2k15, l2k15, p2k16, g2k16, b2k16, a2k17, d2k17, p2k17, s2k17, a2k18, p2k18, g2k18, a2k19, t2k19, g2k19, p2k19, e2k19, a2k20 созданы Markus Hall.<br>
+r2k12, g2k12, n2k12, b2k13, n2k14, m2k14, g2k14, s2k15, c2k15, l2k15, p2k16, g2k16, b2k16, a2k17, d2k17, p2k17, s2k17, a2k18, p2k18, g2k18, a2k19, t2k19, g2k19, p2k19, e2k19, a2k20, k2k20 созданы Markus Hall.<br>
 p2k12 создана Bidon Mickael aka Mogmi.<br>
 c2k12 создана Theo de Raadt.<br>
 n2k13 купленная футболка с добавленной надписью.<br>
