[1.818] sync - ftp.html

--- a/ftp.html
+++ b/ftp.html
@@ -19,7 +19,7 @@
 <h3 id="mirrors">Загрузка через HTTP/FTP</h3>
 
 <p>
-OpenBSD можно скачать через HTTP(s) или FTP.
+Систему OpenBSD можно скачать через HTTP(s) или FTP.
 В принципе, для загрузки вам нужна лишь совсем маленькая часть того,
 что есть на серверах. Остальное (устанавливаемые компоненты) может
 быть установленно из различных мест во время установки системы, в
