--- a/faq/pf/index.html
+++ b/faq/pf/index.html
@@ -45,7 +45,7 @@ PF: Пакетный фильтр OpenBSD
 	</ul>
 <li>Пример
 	<ul>
-	<li><a href="https://openbsd.org/faq/pf/example1.html" >Брандмауэр для дома или маленького офиса</a>
+	<li><a href="example1.html"                            >Настройка маршрутизатора</a>
 	</ul>
 </ul>
 
