[1.543] update link to example1 - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -227,7 +227,7 @@ XXX  -->
   </ul>
 <li>Примеры правил
   <ul>
-  <li><a href="https://www.openbsd.org/faq/pf/example1.html" >Настройка брандмауэра (building a router)</a>
+  <li><a href="pf/example1.html"                             >Настройка маршрутизатора</a>
   </ul>
 </ul>
 
