[1.16] sync, better wording - rpki-client/portable.html

--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -26,10 +26,10 @@
 <a href="../libressl/index.html">LibreSSL</a>.
 
 <p>
-Чем больше таких интерфейсов изначально реализовано в ОС, тем выше вероятность,
-что портированная версия будет работать.
-Если ваша ОС не поддерживается, попросите вашего поставщика ОС поддерживать эти
-безопасные и простые API.
+Чем больше таких интерфейсов реализовано в ОС, тем выше вероятность,
+что портированная версия будет на ней работать.
+Если ваша ОС не поддерживается, попросите разработчика ОС добавить поддержку
+этих безопасных и простых API.
 
 <p>
 На момент написания портированная версия rpki-client собиралась и работала на
