--- a/openssh/index.html
+++ b/openssh/index.html
@@ -1,66 +1,69 @@
 <!doctype html>
-<html lang=ru>
-    <meta charset=utf-8>
-    <title>OpenSSH</title>
-    <meta name="description" content="the main OpenSSH page">
-    <link rel="shortcut icon" href="favicon.ico" TYPE="image/x-icon">
-    <link rel="canonical" href="https://www.openssh.com/">
-    <link rel="stylesheet" href="openbsd.css">
+<html lang=en id=project-main>
+	<meta charset=utf-8>
+	<title>OpenSSH</title>
+	<meta name="description" content="the main OpenSSH page">
+	<link rel="canonical" href="https://www.openssh.com/">
+	<link rel="stylesheet" href="openbsd.css">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-<table id="project-main" class="not-openbsd">
-  <tr class="align-top">
-    <td>
+<main>
+<nav>
 
-      <h1>Проект OpenSSH</h1>
-      <ul>
-        <li><a href="goals.html">Цели проекта</a>
-        <li><a href="https://www.openssh.com/releasenotes.html">Release Notes</a>
-        <li><a href="history.html">История</a>
-        <li><a href="features.html">Возможности</a>
-        <li><a href="security.html">Безопасность</a>
-        <li><a href="specs.html">Спецификации</a>
-        <li><a href="users.html">Пользователи</a>
-      </ul>
+<header>Проект OpenSSH</header>
+<ul>
+	<li><a href="goals.html">Цели проекта</a>
+	<li><a href="https://www.openssh.com/releasenotes.html">Release Notes</a>
+	<li><a href="history.html">История</a>
+	<li><a href="features.html">Возможности</a>
+	<li><a href="security.html">Безопасность</a>
+	<li><a href="specs.html">Спецификации</a>
+	<li><a href="users.html">Пользователи</a>
+</ul>
 
-      <h1>Информация</h1>
-      <ul>
-        <li><a href="manual.html">Руководства</a>
-        <li><a href="report.html">Сообщить об ошибке</a>
-        <li><a href="list.html">Почтовая рассылка</a>
-        <li><a href="https://marc.info/?l=openssh-unix-dev&amp;r=1&amp;w=2">Архив рассылки</a>
-      </ul>
+<header>Информация</header>
+<ul>
+	<li><a href="manual.html">Руководства</a>
+	<li><a href="report.html">Сообщить об ошибке</a>
+	<li><a href="list.html">Почтовая рассылка</a>
+	<li><a href="https://marc.info/?l=openssh-unix-dev&amp;r=1&amp;w=2">Архив рассылки</a>
+</ul>
 
-      <h1>Для OpenBSD</h1>
-      <ul>
-        <li><a href="openbsd.html">FTP</a>
-        <li><a href="../anoncvs.html">AnonCVS</a>
-        <li><a href="https://cvsweb.openbsd.org/src/usr.bin/ssh">CVSWeb</a>
-      </ul>
+<header>Для OpenBSD</header>
+<ul>
+	<li><a href="openbsd.html">FTP</a>
+	<li><a href="../anoncvs.html">AnonCVS</a>
+	<li><a href="https://cvsweb.openbsd.org/src/usr.bin/ssh">CVSWeb</a>
+</ul>
 
-      <h1>Для других ОС</h1>
-      <ul>
-        <li><a href="portable.html">Linux</a>
-        <li><a href="portable.html">Solaris</a>
-        <li><a href="portable.html">FreeBSD</a>
-        <li><a href="portable.html">AIX</a>
-        <li><a href="portable.html">HP-UX</a>
-        <li><a href="portable.html">другие..</a>
-      </ul>
+<header>Для других ОС</header>
+<ul>
+	<li><a href="portable.html">Linux</a>
+	<li><a href="portable.html">Solaris</a>
+	<li><a href="portable.html">FreeBSD</a>
+	<li><a href="portable.html">AIX</a>
+	<li><a href="portable.html">HP-UX</a>
+	<li><a href="portable.html">другие..</a>
+</ul>
 
-    <td>
-      <h1 class="header">
-        <img src="images/openssh.gif" height=191 width=578 alt="[OpenSSH]">
-      </h1>
+</nav>
+<article>
 
-      <p id="callout">
-      Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.3">OpenSSH 8.3</a>
-      состоялся 27 мая 2020 года.<br>
+<h2>
+	<img src="images/openssh.gif" alt="[OpenSSH]" height=191 width=578>
+</h2>
+ 
+<p id="callout">
+Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.3">OpenSSH 8.3</a>
+состоялся 27 мая 2020 года.<br>
+
 <p>
-OpenSSH это основной инструмент для создания соединений по протоколу SSH.
-Он шифрует весь трафик, что исключает прослушивание, захват соединений,
-и другие атаки.
-Кроме того, OpenSSH предоставляет широкие возможности для создания безопасного
-туннелирования, несколько методов аутентификации и множество раличных настроек.
+OpenSSH это основной инструмент для создания соединений
+по протоколу SSH. Он шифрует весь трафик, что исключает
+прослушивание, захват соединений, и другие атаки.
+Кроме того, OpenSSH предоставляет широкие возможности для
+создания безопасного туннелирования, несколько методов
+аутентификации и множество раличных настроек.
 
 <p>
 OpenSSH состоит из следующих компонентов:
@@ -74,36 +77,27 @@ OpenSSH состоит из следующих компонентов:
 Управление ключами при помощи
 <a href="https://man.openbsd.org/ssh-add.1">ssh-add</a>,
 <a href="https://man.openbsd.org/ssh-keysign.8">ssh-keysign</a>,
-<a href="https://man.openbsd.org/ssh-keyscan.1">ssh-keyscan</a>, and
+<a href="https://man.openbsd.org/ssh-keyscan.1">ssh-keyscan</a>, и
 <a href="https://man.openbsd.org/ssh-keygen.1">ssh-keygen</a>.
 <li>
 Серверная часть состоит из
 <a href="https://man.openbsd.org/sshd.8">sshd</a>,
-<a href="https://man.openbsd.org/sftp-server.8">sftp-server</a>, and
+<a href="https://man.openbsd.org/sftp-server.8">sftp-server</a>, и
 <a href="https://man.openbsd.org/ssh-agent.1">ssh-agent</a>.
 </ul>
 
 <p>
 OpenSSH написан несколькими разработчиками
-<a href="../index.html">проекта OpenBSD</a> и распростаняется по лицензии BSD.
+<a href="../index.html">проекта OpenBSD</a>
+и распростаняется по лицензии BSD.
 
 <p>
-OpenSSH включен во многие коммерческие продукты, но очень не многие 
-компании помогают OpenSSH с финансированием.
+OpenSSH включен во многие коммерческие продукты,
+но очень не многие компании помогают OpenSSH с финансированием.
 
 <p>
 Финансовая помощь OpenSSH может быть оказана через 
 <a href="https://www.openbsd.org/donations.html">OpenBSD Foundation</a>.
 
-<tr class="align-bottom">
-<td>
-<td>
-<hr>
-<small>
-<em>This site is a translated version of <a href="https://www.openssh.com/">openssh.com</a>.
-Translation project is organized by <a href="https://github.com/alexander-naumov">Alexander Naumov</a>
-and is going with the support of
-<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/graphs/contributors">
-volunteers</a>.</em>
-</small>
-</table>
+</article>
+</main>
