[1.575] sync - openssh/portable.html

--- a/openssh/portable.html
+++ b/openssh/portable.html
@@ -51,10 +51,11 @@
 
 <p id="downloads">
 В следующих файлах описывается процесс разработки портированной версии OpenSSH.
-Файлы релизов подписаны открытым PGP-ключом, содержащемся в файле
-<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/RELEASE_KEY.asc">RELEASE_KEY.asc</a>,
-доступном на FTP сервере.
-Этот ключ также доступны через <a href="http://www.keyserver.net/">key server network</a>.
+Файлы релизов подписаны открытым PGP-ключом, находящемся в файле
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/RELEASE_KEY.asc">
+RELEASE_KEY.asc</a>, доступном на FTP сервере.
+Этот ключ также доступны через
+<a href="http://www.keyserver.net/">key server network</a>.
 
 <ul>
 <li><a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/ChangeLog">
@@ -91,8 +92,9 @@
 
 <p>
 Мы просим прочитать и не забывать об
-<a href="https://man.openbsd.org/style">этих правилах</a> при отправке кода.
-Патчи должны быть отправлены в унифицированном формате diff.
+<a href="https://man.openbsd.org/style">этих правилах</a>
+при отправке кода.
+Патчи должны быть отправлены в унифицированном diff формате.
 
 <h2>
 Загрузка
