[1.5] sync - openiked/papers.html

--- a/openiked/papers.html
+++ b/openiked/papers.html
@@ -2,7 +2,7 @@
 <html lang=ru>
 <meta charset=utf-8>
 
-<title>Доклады и презентации о OpenIKED</title>
+<title>OpenIKED: доклады и презентации</title>
 <meta name="description" content="OpenIKED related papers and presentations">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../openbsd.css">
