--- a/openiked/goals.html
+++ b/openiked/goals.html
@@ -2,7 +2,7 @@
 <html lang=ru>
 <meta charset=utf-8>
 
-<title>OpenIKED Цели проекта</title>
+<title>OpenIKED: цели проекта</title>
 <meta name="description" content="OpenIKED Goals">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../openbsd.css">
