[1.635] sync - errata.html

--- a/errata.html
+++ b/errata.html
@@ -77,4 +77,5 @@
 <a href="https://www.openbsd.org/errata64.html">6.4</a>,
 <a href="https://www.openbsd.org/errata65.html">6.5</a>,
 <a href="https://www.openbsd.org/errata66.html">6.6</a>,
-<a href="https://www.openbsd.org/errata67.html">6.7</a>.
+<a href="https://www.openbsd.org/errata67.html">6.7</a>,
+<a href="https://www.openbsd.org/errata68.html">6.8</a>.
