--- a/openntpd/index.html
+++ b/openntpd/index.html
@@ -1,48 +1,52 @@
 <!doctype html>
-<html lang=en>
-    <meta charset=utf-8>
-    <title>OpenNTPD</title>
-    <meta name="description" content="the main OpenNTPD page">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="canonical" href="http://www.openntpd.org/">
-    <link rel="stylesheet" href="openbsd.css">
+<html lang=ru id=project-main>
+	<meta charset=utf-8>
+	<title>OpenNTPD</title>
+	<meta name="description" content="the main OpenNTPD page">
+	<link rel="canonical" href="http://www.openntpd.org/">
+	<link rel="stylesheet" href="openbsd.css">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-<table id="project-main" class="not-openbsd">
-  <tr class="align-top">
-    <td>
+<main>
+<nav>
 
-      <h1>Информация</h1>
-      <ul>
-        <li><a href="goals.html">Цели проекта</a>
-        <li><a href="features.html">Возможности</a>
-        <li><a href="papers.html">Доклады</a>
-        <li><a href="manual.html">Документация</a>
-      </ul>
-      <h1>Для OpenBSD</h1>
-      <ul>
-        <li><a href="https://openbsd-ru.github.io/anoncvs.html">AnonCVS</a>
-        <li><a href="https://cvsweb.openbsd.org/src/usr.sbin/ntpd/">CVSWeb</a>
-      </ul>
-      <h1>Для других ОС</h1>
-      <ul>
-        <li><a href="portable.html">Releases</a>
-        <li><a href="https://github.com/openntpd-portable">Проект на GitHub</a>
-        <li><a href="https://github.com/openntpd-portable/openntpd-portable/issues">Сообщить об ошибке</a>
-      </ul>
+<header>Информация</header>
+<ul>
+	<li><a href="goals.html">Цели проекта</a>
+	<li><a href="features.html">Возможности</a>
+	<li><a href="papers.html">Доклады</a>
+	<li><a href="manual.html">Документация</a>
+</ul>
 
-    <td>
-      <h1 class="header">
-        <img src="images/openntpd.jpg" height=210 width=599 alt="[OpenNTPD]">
-      </h1>
+<header>Для OpenBSD</header>
+<ul>
+	<li><a href="https://openbsd-ru.github.io/anoncvs.html">AnonCVS</a>
+	<li><a href="https://cvsweb.openbsd.org/src/usr.sbin/ntpd/">CVSWeb</a>
+</ul>
 
-      <p id="callout">
-        Релиз <a href="http://openntpd.org/txt/release-6.2p3.txt">OpenNTPD 6.2p3</a> состоялся 30 октября 2017 года
+<header>Для других ОС</header>
+<ul>
+	<li><a href="portable.html">Releases</a>
+	<li><a href="https://github.com/openntpd-portable">Проект на GitHub</a>
+	<li><a href="https://github.com/openntpd-portable/openntpd-portable/issues">Сообщить об ошибке</a>
+</ul>
+
+</nav>
+<article>
+
+<h2>
+	<img src="images/openntpd.jpg" alt="[OpenNTPD]" height=210 width=599>
+</h2>
+
+<p id="callout">
+Релиз <a href="http://openntpd.org/txt/release-6.2p3.txt">OpenNTPD 6.2p3</a>
+состоялся 30 октября 2017 года
 
 <p>
-OpenNTPD представляет из себя <strong>СВОБОДНУЮ</strong> и легкую в использовании
-реализацию Network Time Protocol. Она позволяет синхронизировать установки
-времени в системе с удаленными NTP-серверами, а так же сама может выступать в
-качестве сервера.
+OpenNTPD представляет из себя <strong>СВОБОДНУЮ</strong> и простую в
+использовании реализацию Network Time Protocol.
+Она позволяет синхронизировать установки времени в системе с удаленными
+NTP-серверами, а так же сама может выступать в качестве сервера.
 
 <p>
 OpenNTPD была первоначально написана Хеннингом Брауэром (Henning Brauer)
@@ -56,15 +60,5 @@ OpenNTPD была первоначально написана Хеннингом
 <p>
 OpenNTPD свободно распространяется в соответствии с лицензией BSD.
 
-<tr class="align-bottom">
-<td>
-<td>
-<hr>
-<small>
-<em>This site is a translated version of <a href="http://www.openntpd.org/">openntpd.org</a>.
-Translation project is organized by <a href="https://github.com/alexander-naumov">Alexander Naumov</a>
-and is going with the support of
-<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/graphs/contributors">
-volunteers</a>.</em>
-</small>
-</table>
+</article>
+</main>
