[1.426] sync - openntpd/portable.html

--- a/openntpd/portable.html
+++ b/openntpd/portable.html
@@ -44,7 +44,7 @@
 <p>
 Чем больше таких интерфейсов изначально реализовано в ОС, тем выше
 вероятность, что портированная версия будет работать. Если ваша ОС
-не поддерживается, попросите вашего поставщика ОС поддерживать
+не поддерживается, попросите разработчика ОС добавить в систему
 эти безопасные и простые API.
 
 <p>
